--- a/nordbootstrap_variables.scss
+++ b/nordbootstrap_variables.scss
@@ -35,7 +35,6 @@ $body-color: $white;
 $enable-shadows: true;
 $enable-gradients: true;
 $modal-content-bg: $gray-700;
-$close-color: $red;
 $modal-header-border-color: $gray-700;
 $card-bg: $gray-700;
 $progress-bar-color: $gray-700;
@@ -107,6 +106,6 @@ $navbar-light-active-color: $blue;
 $navbar-light-hover-color: $blue;
 $navbar-light-color: $white;
 $navbar-dark-brand-hover-color: rgba($gray-600, 0.80);
+$close-color: $white;
 $close-text-shadow: null;
-$close-font-size: $font-size-base * 2.25;
-$close-font-weight: $font-weight-normal;
+$close-font-weight: $font-weight-bolder;
